changed config to my own aws deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "us-west-2"
-  app: "docker"
-  env: "Docker-env"
-  bucket_name: "elasticbeanstalk-us-west-2-306476627547"
+  region: "eu-west-3"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-west-3-340948737027"
   bucket_path: "docker"
   on:
     branch: master
