Trying to solve errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "eu-west-3"
-  app: "docker-react"
-  env: "DockerReact-env"
+  app: "docker"
+  env: "Docker-env"
   bucket_name: "elasticbeanstalk-eu-west-3-340948737027"
   bucket_path: "docker"
   on:
